--- a/tox.ini
+++ b/tox.ini
@@ -20,8 +20,8 @@ deps =
 
 commands =
     pytest --basetemp={envtmpdir} --doctest-modules \
-        python_project_template tests/ \
-        --cov=python_project_template \
+        planning_with_past tests/ \
+        --cov=planning_with_past \
         --cov-report=xml \
         --cov-report=html \
         --cov-report=term
@@ -45,45 +45,45 @@ deps =
     flake8-isort
     pydocstyle
 commands =
-    flake8 python_project_template tests scripts
+    flake8 planning_with_past tests scripts
 
 [testenv:mypy]
 skip_install = True
 deps =
     mypy
 commands =
-    mypy python_project_template tests scripts
+    mypy planning_with_past tests scripts
 
 [testenv:pylint]
 skipdist = True
 deps = pylint
-commands = pylint python_project_template tests scripts
+commands = pylint planning_with_past tests scripts
 
 [testenv:black]
 skip_install = True
 deps = black==20.8b1
-commands = black python_project_template tests scripts
+commands = black planning_with_past tests scripts
 
 [testenv:black-check]
 skip_install = True
 deps = black==20.8b1
-commands = black python_project_template tests scripts --check --verbose
+commands = black planning_with_past tests scripts --check --verbose
 
 [testenv:isort]
 skip_install = True
 deps = isort
-commands = isort python_project_template tests scripts
+commands = isort planning_with_past tests scripts
 
 [testenv:isort-check]
 skip_install = True
 deps = isort
-commands = isort --check-only python_project_template tests scripts
+commands = isort --check-only planning_with_past tests scripts
 
 [testenv:bandit]
 skipsdist = True
 skip_install = True
 deps = bandit
-commands = bandit python_project_template tests scripts
+commands = bandit planning_with_past tests scripts
 
 [testenv:safety]
 skipsdist = True
@@ -95,14 +95,14 @@ commands = safety
 skipsdist = True
 skip_install = True
 deps = vulture
-commands = vulture python_project_template scripts/whitelist.py
+commands = vulture planning_with_past scripts/whitelist.py
 
 [testenv:darglint]
 skipsdist = True
 skip_install = True
 deps =
     darglint>=1.8.0
-commands = darglint python_project_template
+commands = darglint planning_with_past
 
 [testenv:docs]
 skip_install = True
