feat: add bootstrap code
- add prp as submodule
- add Dockerfile to build PRP
- implement PRP wrapper (not complete, need to extract plan)
- add some PDDL domain and problems (only Acrobatics domain)
- other minor fixes

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "examples/downward"]
 	path = examples/downward
 	url = git@github.com:aibasel/downward.git
+[submodule "third_party/planner-for-relevant-policies"]
+	path = third_party/planner-for-relevant-policies
+	url = https://github.com/QuMuLab/planner-for-relevant-policies.git
