--- a/setup.cfg
+++ b/setup.cfg
@@ -48,8 +48,11 @@ ignore=DAR401
 
 # Per-module options:
 
-;[mypy-numpy]
-;ignore_missing_imports = True
+[mypy-pddl.*]
+ignore_missing_imports = True
+
+[mypy-networkx.*]
+ignore_missing_imports = True
 
 # Per-module options for tests dir:
 
