--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ include = []
 python = "^3.7"
 pylogics = "^0.1.0"
 pddl = "^0.1.0"
+networkx = {extras = ["all"], version = "^2.5.1"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
@@ -69,6 +70,7 @@ hypothesis-pytest = "^0.19.0"
 mkdocs-mermaid-plugin = {git = "https://github.com/pugong/mkdocs-mermaid-plugin.git"}
 darglint = ">=1.8.0"
 mkdocs-bibtex = "^0.4.0"
+graphviz = "^0.16"
 
 [build-system]
 requires = ["poetry>=0.12"]
