update project structure

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,62 @@
+[metadata]
+name=planning-with-past
+author=Francesco Fuggitti <fuggitti@diag.uniroma1.it>, Marco Favorito <favorito@diag.uniroma1.it>
+version = attr: planning_with_past.__version__
+description = Classical and FOND Planning for Past Temporal Goals.
+long_description = file: README.md, CHANGELOG.md, LICENSE
+long_description_content_type = "text/markdown"
+keywords = planning temporal goals
+license = GPL-3.0-or-later
+license_file = LICENSE
+classifiers =
+    Intended Audience :: Developers
+    Environment :: Console
+    Environment :: Web Environment
+    Development Status :: 2 - Pre-Alpha
+    Intended Audience :: Developers
+    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)'
+    Natural Language :: English
+    Operating System :: MacOS
+    Operating System :: Unix
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Topic :: Communications
+    Topic :: Internet
+    Topic :: Scientific/Engineering
+    Topic :: Software Development
+    Topic :: System
+
+
+[option.project_urls]
+"Bug Reports": "https://github.com/whitemech/planning-with-past/issues"
+"Source": "https://github.com/whitemech/planning-with-past"
+
+[options]
+zip_safe = False
+include_package_data = True
+packages = find:
+scripts =
+install_requires =
+    pylogics
+    networkx[all]>=2.5.1,<3.0.0
+
+
+python_requires= >=3.7
+
+[options.package_data]
+* = *.txt, *.md
+
+[options.packages.find]
+include =
+    planning_with_past*
+exclude =
+
 [bdist_wheel]
 universal = 1
 
 [aliases]
 test = pytest
 
-[metadata]
-license_file = LICENSE
 
 [flake8]
 ignore = W503
