--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,4 @@
 [tox]
-isolated_build = True
 envlist = bandit, safety, check-copyright, black-check, isort-check, vulture, flake8, mypy, pylint, py3.8, py3.7, docs
 
 [tox:.package]
@@ -16,7 +15,7 @@ deps =
     pytest-cov
     pytest-randomly
     ; Main dependencies
-    ; TODO
+    -e {toxinidir}/third_party/pddl
 
 commands =
     pytest --basetemp={envtmpdir} --doctest-modules \
@@ -61,12 +60,12 @@ commands = pylint planning_with_past tests scripts
 
 [testenv:black]
 skip_install = True
-deps = black==20.8b1
+deps = black==21.6b0
 commands = black planning_with_past tests scripts
 
 [testenv:black-check]
 skip_install = True
-deps = black==20.8b1
+deps = black==21.6b0
 commands = black planning_with_past tests scripts --check --verbose
 
 [testenv:isort]
@@ -89,7 +88,7 @@ commands = bandit planning_with_past tests scripts
 skipsdist = True
 skip_install = True
 deps = safety
-commands = safety
+commands = safety planning_with_past
 
 [testenv:vulture]
 skipsdist = True
@@ -112,9 +111,6 @@ deps =
     markdown-include
     pymdown-extensions
     markdown
-    mknotebooks
-    mkdocs-bibtex
-    git+https://github.com/pugong/mkdocs-mermaid-plugin.git#egg=mkdocs-mermaid-plugin
 commands =
     mkdocs build --clean
 
@@ -126,9 +122,6 @@ deps =
     markdown-include
     pymdown-extensions
     markdown
-    mknotebooks
-    mkdocs-bibtex
-    git+https://github.com/pugong/mkdocs-mermaid-plugin.git#egg=mkdocs-mermaid-plugin
 commands =
     mkdocs build --clean
     python -c 'print("###### Starting local server. Press Control+C to stop server ######")'
