--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
-[submodule "examples/downward"]
-	path = examples/downward
-	url = git@github.com:aibasel/downward.git
 [submodule "third_party/planner-for-relevant-policies"]
 	path = third_party/planner-for-relevant-policies
 	url = https://github.com/QuMuLab/planner-for-relevant-policies.git
+[submodule "third_party/downward"]
+	path = third_party/downward
+	url = git@github.com:aibasel/downward.git
+[submodule "third_party/pddl"]
+	path = third_party/pddl
+	url = https://github.com/whitemech/pddl.git
