--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,6 +21,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
+      with:
+        submodules: recursive
     - uses: actions/setup-python@master
       with:
         python-version: ${{ matrix.python-version }}
