--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,13 +14,15 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9]
+        os: [ubuntu-latest] #, macos-latest, windows-latest]
+        python-version: [3.7] #, 3.8, 3.9]
 
     timeout-minutes: 30
 
     steps:
     - uses: actions/checkout@master
+      with:
+        submodules: recursive
     - uses: actions/setup-python@master
       with:
         python-version: ${{ matrix.python-version }}
