docs: fix docs build

--- a/tox.ini
+++ b/tox.ini
@@ -111,6 +111,7 @@ deps =
     markdown-include
     pymdown-extensions
     markdown
+    mknotebooks
 commands =
     mkdocs build --clean
 
@@ -122,6 +123,7 @@ deps =
     markdown-include
     pymdown-extensions
     markdown
+    mknotebooks
 commands =
     mkdocs build --clean
     python -c 'print("###### Starting local server. Press Control+C to stop server ######")'
