--- a/Pipfile
+++ b/Pipfile
@@ -29,7 +29,7 @@ markdown-include = ">=0.6.0"
 mkdocs-material = ">=7.1.9"
 ipython = ">=7.25.0"
 jupyter = ">=1.0.0"
-mknotebooks = ">=0.7.0"
+mknotebooks = ">0.7.0,<0.8.0"
 markdown = "3.3.4"
 twine = ">=3.3.0"
 hypothesis = ">=6.14.0"
