--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ packages = find:
 scripts =
 install_requires =
     pylogics
-    networkx[all]>=2.5.1,<3.0.0
+    networkx[default,extra]>=2.5.1,<3.0.0
 
 
 python_requires= >=3.7
