--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,8 +27,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run:  pip install tox poetry
-#    # set up environment depending on the platform in use
+      run:  |
+        pip install tox poetry
+        sudo apt-get install -y graphviz libgraphviz-dev
+      #    # set up environment depending on the platform in use
 #    - if: matrix.os == 'ubuntu-latest'
 #      name: Install dependencies (ubuntu-latest)
 #      run: ...
