--- a/tox.ini
+++ b/tox.ini
@@ -88,7 +88,7 @@ commands = bandit planning_with_past tests scripts
 skipsdist = True
 skip_install = True
 deps = safety
-commands = safety planning_with_past
+commands = safety check
 
 [testenv:vulture]
 skipsdist = True
