--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,6 +27,8 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run:  pip install tox
+      run:  |
+        pip install tox
+        sudo apt-get install -y graphviz libgraphviz-dev
     - name: Generate Documentation
       run: tox -e docs
