--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,7 +27,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run:  pip install tox
+      run:  |
+        pip install tox
+        sudo apt-get install -y graphviz libgraphviz-dev
     - name: Pylint
       run: tox -e pylint
     - name: Code style check
