--- a/Pipfile
+++ b/Pipfile
@@ -37,6 +37,7 @@ hypothesis-pytest = ">=0.19.0"
 darglint = ">=1.8.0"
 mkdocs-bibtex = ">=0.4.0"
 graphviz = ">=0.16"
+pddl = {editable = true, path = "./third_party/pddl"}
 
 [requires]
 python_version = "3.7"
