--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ codecov = ">=2.1.11"
 black = "==21.6b0"
 mypy = ">=0.910"
 isort = ">=5.9.1"
-flake8 = ">=3.9.1"
+flake8 = "<4"
 flake8-docstrings = ">=1.5.0"
 flake8-bugbear = ">=21.4.3"
 flake8-eradicate = ">=1.1.0"
@@ -30,7 +30,7 @@ mkdocs-material = ">=7.1.9"
 ipython = ">=7.25.0"
 jupyter = ">=1.0.0"
 mknotebooks = ">0.7.0,<0.8.0"
-markdown = "3.3.4"
+markdown = ">=3.3.4"
 twine = ">=3.3.0"
 hypothesis = ">=6.14.0"
 hypothesis-pytest = ">=0.19.0"
@@ -38,6 +38,7 @@ darglint = ">=1.8.0"
 mkdocs-bibtex = ">=0.4.0"
 graphviz = ">=0.16"
 pddl = {editable = true, path = "./third_party/pddl"}
+click = "*"
 
 [requires]
 python_version = "3.7"
