--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,7 @@
 	url = git@github.com:aibasel/downward.git
 [submodule "third_party/pddl"]
 	path = third_party/pddl
-	url = https://github.com/whitemech/pddl.git
+	url = git@github.com:whitemech/pddl.git
+[submodule "third_party/myND"]
+	path = third_party/myND
+	url = git@github.com:robertmattmueller/myND.git
