improve benchmarks for blocksworld
- add compilation time in statistics
- improve customizability of wrappers (heuristic, strong/non-strong)
- add blocksworld experiments battery

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "third_party/myND"]
 	path = third_party/myND
 	url = git@github.com:robertmattmueller/myND.git
+[submodule "third_party/ltlfond2fond"]
+	path = third_party/ltlfond2fond
+	url = https://bitbucket.org/acamacho/ltlfond2fond
