improve blocksworld1a benchmark script

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ scripts =
 install_requires =
     pylogics
     networkx[default,extra]>=2.5.1,<3.0.0
-
+    git+https://github.com/whitemech/FOND4LTLfPLTLf.git#fond4ltlfpltlf
 
 python_requires= >=3.7
 
