--- a/.gitignore
+++ b/.gitignore
@@ -783,4 +783,5 @@ new-problem.pddl
 output.tsv
 results/
 !final_results/**/**/output.log
-!final_results/**/**/**/output.sas
+!final_results/**/**/**/**/output.sas
+!final_results/**/**/**/output.tsv
