anonymizie AUTHORS and setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name=planning-with-past
-author=Francesco Fuggitti <fuggitti@diag.uniroma1.it>, Marco Favorito <favorito@diag.uniroma1.it>
+author=Anonymous Author
 version = attr: planning_with_past.__version__
 description = Classical and FOND Planning for Past Temporal Goals.
 long_description = file: README.md, CHANGELOG.md, LICENSE
