--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -3,7 +3,6 @@ name: lint
 on:
   push:
     branches:
-      - develop
       - main
   pull_request:
 
@@ -15,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: [3.7]
+        python-version: ["3.8", "3.10", "3.11"]
 
     timeout-minutes: 30
 
@@ -29,7 +28,6 @@ jobs:
     - name: Install dependencies
       run:  |
         pip install tox
-        sudo apt-get install -y graphviz libgraphviz-dev
     - name: Pylint
       run: tox -e pylint
     - name: Code style check
@@ -37,8 +35,9 @@ jobs:
         tox -e black-check
         tox -e isort-check
         tox -e flake8
-        tox -e vulture
         tox -e darglint
+    - name: Unused code check
+      run: tox -e vulture
     - name: Static type check
       run: tox -e mypy
     - name: Check copyright
