--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,8 +3,7 @@ name: docs
 on:
   push:
     branches:
-      - develop
-      - master
+      - main
   pull_request:
 
 jobs:
@@ -15,20 +14,17 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: [3.7]
+        python-version: [3.10]
 
     timeout-minutes: 30
 
     steps:
     - uses: actions/checkout@main
-      with:
-        submodules: recursive
     - uses: actions/setup-python@main
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run:  |
         pip install tox
-        sudo apt-get install -y graphviz libgraphviz-dev
     - name: Generate Documentation
       run: tox -e docs
