--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,6 @@ name: test
 on:
   push:
     branches:
-      - develop
       - main
   pull_request:
 
@@ -14,8 +13,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest] #, macos-latest, windows-latest]
-        python-version: [3.7] #, 3.8, 3.9]
+        os: [ubuntu-latest]
+        python-version: ["3.8", "3.10", "3.11"]
 
     timeout-minutes: 30
 
@@ -29,19 +28,17 @@ jobs:
     - name: Install dependencies
       run:  |
         pip install tox
-        sudo apt-get install -y graphviz libgraphviz-dev
-      #    # set up environment depending on the platform in use
-#    - if: matrix.os == 'ubuntu-latest'
-#      name: Install dependencies (ubuntu-latest)
-#      run: ...
-#    - if: matrix.os == 'macos-latest'
-#      name: Install dependencies (macos-latest)
-#      run: ...
-#    - if: matrix.os == 'windows-latest'
-#      name: Install dependencies (windows-latest)
-#      env:
-#        ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-#      run: ...
     - name: Unit tests and coverage
       run: |
+        pyver=`echo ${{ matrix.python-version }} | tr -d "."`
         tox -e py${{ matrix.python-version }}
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./coverage.xml
+        flags: unittests
+        name: codecov-umbrella
+        fail_ci_if_error: true
+    - name: Generate Documentation
+      run: tox -e docs
