--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,8 @@ disable =
     too-many-arguments
 
 [pylint.FORMAT]
-max-line-length = 123
+max-line-length = 120
+exclude=scripts/whitelist.py
 
 [mypy]
 python_version = 3.10
