use ignore keyword

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ disable =
     invalid-name,
     no-value-for-parameter,
     too-many-arguments
+ignore=scripts/whitelist.py
 
 [pylint.FORMAT]
 max-line-length = 120
