--- a/tox.ini
+++ b/tox.ini
@@ -74,7 +74,7 @@ commands = bandit --configfile .bandit.yml --recursive plan4past tests scripts
 [testenv:pylint]
 skipdist = True
 deps = pylint>=2.17.4,<2.18.0
-commands = pylint plan4past tests --exclude scripts/whitelist.py
+commands = pylint plan4past tests
 
 [testenv:safety]
 skipsdist = False
