--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = check-copyright, black-check, isort-check, darglint, docs, flake8, mypy, pylint, py3{8,10,11}
+envlist = check-copyright, black-check, isort-check, darglint, docs, flake8, mypy, pylint, vulture, py3{8,10,11}
 labels = 
 	code = py3{8,10,11}
-	meta = check-copyright, black-check, isort-check, darglint, docs, flake8, mypy, pylint
+	meta = check-copyright, black-check, isort-check, darglint, docs, flake8, mypy, pylint, vulture
 
 [testenv]
 allowlist_externals = pytest
