--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = check-copyright, black-check, isort-check, darglint, docs, flake8, mypy, pylint, vulture, py3{8,10,11}
+envlist = bandit, black-check, check-copyright, darglint, docs, flake8, isort-check, mypy, safety, pylint, vulture, py3{8,10,11}
 labels = 
 	code = py3{8,10,11}
-	meta = check-copyright, black-check, isort-check, darglint, docs, flake8, mypy, pylint, vulture
+	meta = bandit, black-check, check-copyright, darglint, docs, flake8, isort-check, mypy, safety, pylint, vulture
 
 [testenv]
 allowlist_externals = pytest
