chore: approve checks

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,8 @@ disable =
     too-many-instance-attributes,
     invalid-name,
     no-value-for-parameter,
-    too-many-arguments
+    too-many-arguments,
+    too-many-locals
 
 [pylint.FORMAT]
 max-line-length = 120
