--- a/tox.ini
+++ b/tox.ini
@@ -73,7 +73,9 @@ commands = bandit --configfile .bandit.yml --recursive plan4past tests scripts
 
 [testenv:pylint]
 skipdist = True
-deps = pylint>=2.17.4,<2.18.0
+deps =
+	pylint>=2.17.4,<2.18.0
+	pytest>=7.3.1,<7.4.0
 commands = pylint plan4past tests
 
 [testenv:safety]
