--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ types-requests = "^2.31.0.1"
 types-setuptools = "^67.8.0.0"
 types-toml = "^0.10.8.6"
 vulture = "^2.7"
+docker = ">=6.1.3,<6.2.0"
 
 [build-system]
 requires = ["poetry-core"]
