--- a/.bandit.yml
+++ b/.bandit.yml
@@ -135,7 +135,7 @@ any_other_function_with_shell_equals_true:
   - subprocess.check_output
   - subprocess.run
 assert_used:
-  skips: ["**/test_*.py"]
+  skips: ["**/test_*.py", "tests/helpers/**"]
 hardcoded_tmp_directory:
   tmp_dirs:
   - /tmp
