--- a/setup.cfg
+++ b/setup.cfg
@@ -57,14 +57,18 @@ python_version = 3.10
 strict_optional = True
 
 # Per-module options:
+[mypy-docker.*]
+ignore_missing_imports = True
+
+[mypy-mistune.*]
+ignore_missing_imports = True
+
 [mypy-pddl.*]
 ignore_missing_imports = True
 
 [mypy-pylogics.*]
 ignore_missing_imports = True
 
-[mypy-mistune.*]
-ignore_missing_imports = True
 
 # Per-module options for tests dir:
 [mypy-pytest]
