--- a/tox.ini
+++ b/tox.ini
@@ -8,13 +8,14 @@ labels =
 allowlist_externals = pytest
 setenv = 
 	PYTHONPATH = {toxinidir}
-deps = 
+deps =
+	docker>=6.1.3,<6.2.0
+	mistune>=2.0.5,<2.1.0
 	pytest>=7.3.1,<7.4.0
 	pytest-cov>=4.1.0,<4.2.0
-	pytest-randomly>=3.12.0,<3.13.0
 	pytest-lazy-fixture>=0.6.3,<0.7.0
-	mistune>=2.0.5,<2.1.0
-commands = 
+	pytest-randomly>=3.12.0,<3.13.0
+commands =
 	pytest --basetemp={envtmpdir} --doctest-modules \
 	{posargs:plan4past tests} \
 	--cov=plan4past \
@@ -76,6 +77,7 @@ skipdist = True
 deps =
 	pylint>=2.17.4,<2.18.0
 	pytest>=7.3.1,<7.4.0
+	docker>=6.1.3,<6.2.0
 commands = pylint plan4past tests
 
 [testenv:safety]
