chore: update tox.ini and ci
Remove darglint testenv, and add skipdist to linting testenv

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = bandit, black-check, check-copyright, darglint, docs, flake8, isort-check, mypy, safety, pylint, vulture, py3{8,9,10,11}
+envlist = bandit, black-check, check-copyright, docs, flake8, isort-check, mypy, safety, pylint, vulture, py3{8,9,10,11}
 labels = 
 	code = py3{8,9,10,11}
-	meta = bandit, black-check, check-copyright, darglint, docs, flake8, isort-check, mypy, safety, pylint, vulture
+	meta = bandit, black-check, check-copyright, docs, flake8, isort-check, mypy, safety, pylint, vulture
 
 [testenv]
 allowlist_externals = pytest
@@ -47,21 +47,25 @@ commands =
 	mypy plan4past tests
 
 [testenv:black]
+skipdist = True
 skip_install = True
 deps = black>=23.3.0,<23.4.0
 commands = black plan4past tests
 
 [testenv:black-check]
+skipdist = True
 skip_install = True
 deps = black>=23.3.0,<23.4.0
 commands = black plan4past tests --check --verbose
 
 [testenv:isort]
+skipdist = True
 skip_install = True
 deps = isort>=5.12.0,<5.13.0
 commands = isort plan4past tests
 
 [testenv:isort-check]
+skipdist = True
 skip_install = True
 deps = isort>=5.12.0,<5.13.0
 commands = isort --check-only plan4past tests
