--- a/setup.cfg
+++ b/setup.cfg
@@ -69,6 +69,9 @@ ignore_missing_imports = True
 [mypy-pylogics.*]
 ignore_missing_imports = True
 
+[mypy-FDgrounder.*]
+ignore_missing_imports = True
+
 
 # Per-module options for tests dir:
 [mypy-pytest]
