--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,7 @@ skip_install = True
 deps = 
 	mypy>=1.3.0,<1.4.0
 	types-click>=7.1.8,<7.2.0
+	types-setuptools>=68.2.0.0,<69
 commands = 
 	mypy plan4past tests
 
